src/components/Settings/Settings.module.scss
@use '../../../styles/mixins';
@use '../variables';

$block: '.#{variables.$ns}settings';

#{$block} {
    display: grid;
    grid-template-columns: 216px 1fr;
    width: 834px;
    height: 100%;

    &_view_mobile {
        $content-padding: 20px;
        $modal-header: 56px;

        display: block;
        width: auto;
        height: calc(80vh - $modal-header);
        overflow-x: hidden;

        @supports (height: 90dvh) {
            /* stylelint-disable-next-line */
            height: calc(90dvh - $modal-header);
        }

        &#{$block}_loading {
            text-align: center;
        }

        #{$block}__loader {
            margin-top: $content-padding;
        }

        #{$block}__search {
            padding: 0 #{$content-padding};
            margin: 4px 0 16px;
        }

        #{$block}__page {
            overflow-y: visible;
        }

        #{$block}__tabs {
            .g-tabs__item:first-child {
                margin-left: #{$content-padding};
            }

            .g-tabs__item:last-child {
                margin-right: #{$content-padding};
            }
        }

        #{$block}__section {
            &-heading {
                @include mixins.text-subheader-3;
            }

            &-subheader {
                color: var(--g-color-text-secondary);
            }

            &-heading + #{$block}-subheader {
                margin-top: 8px;
            }

            &-item {
                margin-top: 0;
            }

            &-heading + #{$block}__section-item,
            &-subheader + #{$block}__section-item {
                margin-top: 30px;
            }

            &-item + #{$block}__section-item {
                margin-top: 22px;
            }
        }

        #{$block}__item {
            &:not(&_mode_row) {
                grid-template-columns: 1fr;
                gap: 8px;
            }

            &-heading {
                @include mixins.text-body-2();
            }

            &-description {
                @include mixins.text-body-1();
            }

            &_mode_row {
                grid-template-columns: 1fr auto;

                #{$block}__item-heading {
                    padding-right: #{$content-padding};
                }
            }

            &-content {
                width: 100%;
            }
        }

        #{$block}__not-found {
            @include mixins.text-body-2;
            justify-items: start;
            color: var(--g-color-text-hint);
            margin: 20px 0 0 20px;
        }
    }

    &_loading {
        grid-template-columns: auto;
    }

    &__loader {
        place-self: center;
    }

    &__not-found {
        display: grid;
        place-items: center;
        height: 100%;
    }

    &__menu {
        border-right: 1px solid var(--g-color-line-generic);
    }

    &__heading {
        @include mixins.text-subheader-2;
        margin: 20px 20px 0;
    }

    &__search {
        margin: 0 20px 16px;
    }

    &__page {
        overflow-y: auto;
    }

    &__content {
        padding: 20px;
    }

    &__section {
        &-right-adornment_hidden {
            opacity: 0;
            transition: opacity 0.2s;
        }
        &-heading:hover &-right-adornment_hidden {
            opacity: 1;
        }

        &-heading {
            @include mixins.text-subheader-2;
            margin: 0;
        }

        &-item {
            margin-top: 24px;
        }

        & + & {
            margin-top: 32px;
        }

        &:only-child &-item:first-of-type {
            margin-top: 0px;
        }

        &:only-child &-heading {
            display: none;
        }
    }

    &__item {
        display: grid;
        grid-template-columns: 216px 1fr;
        justify-items: start;

        &_title_hide {
            grid-template-columns: 1fr;
            justify-items: normal;
        }

        &_align_top {
            align-items: start;
        }

        &_align_center {
            align-items: center;
        }

        &-title {
            &_badge {
                position: relative;

                &::after {
                    content: '';
                    display: block;
                    width: 6px;
                    height: 6px;
                    border-radius: 50%;
                    background-color: var(--g-color-text-danger);
                    position: absolute;
                    right: -8px;
                    top: 1px;
                }
            }
        }

        &-description {
            @include mixins.text-caption-2();
            display: block;
            margin-top: 2px;
            padding-right: 20px;
            color: var(--g-color-text-secondary);
        }

        &-right-adornment_hidden {
            opacity: 0;
            transition: opacity 0.2s;
        }
        &:hover &-right-adornment_hidden {
            opacity: 1;
        }
    }

    &__item_selected,
    &__section_selected {
        background: var(--g-color-base-selection);
        padding: 8px;
        border-radius: 8px;
        margin-left: -8px;
    }

    &__found {
        @include mixins.text-accent;
        background: var(--g-color-base-selection);
    }
}

